# ros_3d_pointing_detection

./: CMakeLists.txt  package.xml  setup.py
launch/: 3d_pointing_detection.launch
msg/: DetectedObject.msg
scripts/: 3d_pointing_detection.py
